# django-cookie-consent

./: AUTHORS  CONTRIBUTING.rst  MANIFEST.in  README.md  pyproject.toml  tbump.toml  tox.ini
.github/workflows/: ci.yml  code_quality.yml
cookie_consent/: admin.py  cache.py  conf.py  forms.py  middleware.py  models.py  processor.py  urls.py  util.py  views.py
cookie_consent/management/commands/: prune_cookie_consent_logs.py  prune_logs.py
cookie_consent/templates/cookie_consent/: _cookie_group.html
cookie_consent/templatetags/: cookie_consent_tags.py
docs/: changelog.rst  concept.rst  conf.py  example_app.rst  index.rst  javascript.rst  migrating-1.0.rst  quickstart.rst  settings.rst  usage.rst
docs/reference/: api_templatetags.rst  index.rst  management_commands.rst
js/: README.md  package-lock.json  package.json
js/src/: cookiebar.ts
testapp/templates/: test_page.html
tests/: test_middleware.py  test_prune_cookie_consent_logs.py  test_prune_logs.py  test_settings.py  test_util.py  test_views.py
